src/test/ui/issues/issue-40350.stderr
error: compilation successful
  --> $DIR/issue-40350.rs:12:1
   |
LL | fn main() {}
   | ^^^^^^^^^^^^

error: aborting due to previous error

